# coach

./: .env.example  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  conftest.py  pyproject.toml
backend/.claude/agents/: CLAUDE.md
backend/app/: config.py  database.py  main.py  seed.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  models.py  routes.py  telegram.py
backend/app/exercises/: models.py  routes.py  schemas.py
backend/app/programs/: models.py  routes.py  schemas.py  service.py
backend/app/workouts/: models.py  routes.py  schemas.py
backend/migrations/: 001_explode_program_versions.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_exercises.py  test_health.py  test_program_lineage.py  test_program_versioning.py  test_program_versions.py  test_programs.py  test_report.py  test_seed.py  test_workouts.py
backup/: Dockerfile  backup.sh  entrypoint.sh  restore-full.sh  restore-user.sh
data/: gymcoach.db
frontend/: .gitignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/scripts/: check-no-raw-fetch.mjs
frontend/src/: App.vue  main.ts
gsd/: .gitignore  CLAUDE.md  claude.sh  package-lock.json
gsd/.gsd/: DECISIONS.md  PROJECT.md  QUEUE.md  REQUIREMENTS.md  gsd.db-shm  gsd.db-wal
gsd/.planning/: MILESTONES.md  PROJECT.md  (+5 more)
nginx/: Dockerfile  entrypoint.sh  nginx.conf
(+199 files in other folders)
